Fixed layout issue with Rules view and delted second loader

--- a/public/styles/loaders.css
+++ b/public/styles/loaders.css
@@ -35,72 +35,6 @@
   overflow-x: hidden; /* Disable horizontal scroll */
 }
 
-.threeOverlay {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  z-index: 30; /* Sit on top */
-  left: 0;
-  top: 0;
-  background-color: rgb(0, 0, 0);
-  overflow-x: hidden; /* Disable horizontal scroll */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.loaderContainer {
-  height: 100px;
-  width: 100px;
-}
-
-.threeLoader {
-  --s: 75px; /* adjust this to control the size */
-
-  --_d: calc(0.353 * var(--s)); /* 0.353 = sin(45deg)/2 */
-  width: calc(var(--s) + var(--_d));
-  aspect-ratio: 1;
-  display: flex;
-  margin: calc(var(--s) / 3) 0;
-}
-.threeLoader:before,
-.threeLoader:after {
-  content: '';
-  flex: 1;
-  clip-path: polygon(
-    var(--_d) 0,
-    100% 0,
-    100% calc(100% - var(--_d)),
-    calc(100% - var(--_d)) 100%,
-    0 100%,
-    0 var(--_d)
-  );
-  background: conic-gradient(
-    from -90deg at calc(100% - var(--_d)) var(--_d),
-    #23cefd 135deg,
-    #0d4d5f 0 270deg,
-    #1a9cbf 0
-  );
-  animation: load 1.5s infinite cubic-bezier(0, 0.5, 0.5, 1.8) alternate;
-}
-.threeLoader:before {
-  margin-right: calc(var(--_d) / -2 - 1px);
-}
-.threeLoader:after {
-  margin-left: calc(var(--_d) / -2 - 1px);
-  animation-delay: -0.75s;
-}
-@keyframes load {
-  0%,
-  40% {
-    transform: translateY(calc(var(--s) / -4));
-  }
-  60%,
-  100% {
-    transform: translateY(calc(var(--s) / 4));
-  }
-}
-
 @keyframes fade-in {
   0% {
     opacity: 0;
